--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <nav>
+        <div class="container">
         <div class="wrapper">
             <div class="logo"><a href="">
                 <p>Learn<span style="color:#39A388">code<></p>
@@ -142,5 +143,6 @@
         </div>
     </div>
     <script src="main.js"></script>
+        </div>
 </body>
 </html>
