--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-,l<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -29,7 +29,7 @@
 
         <!-- untuk home -->
         <section id="home">
-            <img src="https://www.freepik.com/free-vector/programming-concept-illustration_7118756.htm#page=1&query=programming&position=1&from_view=search"/> 
+            <img src="https://image.freepik.com/free-vector/programming-concept-illustration_114360-1351.jpg"/> 
             <div class="kolom">
                 <p class="deskripsi">Belajar Programming #dirumahaja</p>
                 <h2>Tetap Mencoba Sampai Kamu Bisa.</h2>
