--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             <div class="kolom">
                 <p class="deskripsi">Belajar Programming #dirumahaja</p>
                 <h2>Tetap Mencoba Sampai Kamu Bisa.</h2>
+                <div data-aos="fade-left">
                 <p class = "content">Apakah Anda juga termasuk orang yang tertarik untuk belajar coding? Jika iya, Anda mengunjungi website yang tepat! LearnCode merupakan media pembelajaran untuk programming yang akan menemani kalian dalam berproses menjadi seorang programmer handal.</p>
                 <button onclick="readMore(this)">Tampilkan Lebih Banyak</button>
-
+                </div>
             </div>
         </section>
 
