--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>LearnCode<></title>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <nav>
@@ -31,11 +33,14 @@
         <!-- untuk home -->
         <section id="home">
             <img src="https://image.freepik.com/free-vector/programming-concept-illustration_114360-1351.jpg"/> 
-            <div class="kolom">
+            <div class="kolom" data-aos="fade-left"
+                    data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">
                 <p class="deskripsi">Belajar Programming #dirumahaja</p>
                 <h2>Tetap Mencoba Sampai Kamu Bisa.</h2>
                 <p class = "content">Apakah Anda juga termasuk orang yang tertarik untuk belajar coding? Jika iya, Anda mengunjungi website yang tepat! LearnCode merupakan media pembelajaran untuk programming yang akan menemani kalian dalam berproses menjadi seorang programmer handal.</p>
                 <button onclick="readMore(this)">Tampilkan Lebih Banyak</button>
+
             </div>
         </section>
 
@@ -44,7 +49,9 @@
             <div class="kolom">
                 <p class="deskripsi"></p>
                 <h2>Kelas Online</h2>
-                <div data-aos="fade-right">
+                <div data-aos="fade-right"
+                    data-aos-offset="300"
+                    data-aos-easing="ease-in-sine">
                     <p class="contents"> Sistem pembelajaran kami yaitu berupa kelas online dengan media video conference
                     dan diajarkan langsung oleh tutor yang kompeten pada bidangnya.</p>
                     <p class="content">Dengan kurikulum yang sudah disusun sedemikian rupa, kami menyediakan paket pembelajaran untuk berbagai bahasa pemrograman seperti Java, Python, HTML, CSS, Javascript dan lain-lain. Jadi tidak perlu khawatir dengan kelas yang kami tawarkan. Untuk info lebih lanjut silahkan daftar kelas yang ada pada samping contact.</p>
@@ -63,7 +70,7 @@
                     <p>Mereka adalah orang yang akan menjadi tutor kalian selama proses pembelajaran</p>
                 </div>
 
-                <div class="tutor-list">
+                <div class="tutor-list" data-aos="zoom-in-up">
                     <div class="kartu-tutor">
                         <img src="https://pbs.twimg.com/profile_images/1212306123878830080/tKGooqvh_400x400.jpg"/>
                         <p>Sandhika Galih</p>
@@ -93,7 +100,7 @@
                     <p>Ini adalah partner yang bekerja sama dengan Learncode<> dalam mengembangkan metode pembelajran yang terbaik.</p>
                 </div>
 
-                <div class="partner-list">
+                <div class="partner-list" data-aos="zoom-in-up">
                     <div class="kartu-partner">
                         <img src="https://media-exp1.licdn.com/dms/image/C560BAQFgaEVT4M46KA/company-logo_200_200/0/1599379483128?e=2159024400&v=beta&t=ZxI9MyUy-GeipkZ4KudVg3epsyBaRLDN2Ea3DbQE_kE"/>
                     </div>
